# vipsdisp

./: .travis.yml  Makefile.am  colorspaces.c  colorspaces.h  configure.ac  disp.c  disp.h  icc_transform_float.c  icc_transform_float.h  imagedisplay.c  imagedisplay.h  imagepresent.c  imagepresent.h  imageview.c  resize.c  vipsdisp.desktop
ci/: appimage.sh  appimage2.sh
